# yolo_tir_rust

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  ros_entrypoint.sh
.github/workflows/: rust.yml
src/: README.md
src/yolo_tir/: Cargo.toml  package.xml
src/yolo_tir/launch/: test_img_inference.launch.py  test_img_inference.xml  yolov7_tir.launch.py  yolov7_tir_launch.xml
src/yolo_tir/param/: fake_pub_config.yaml  net_config.yaml
src/yolo_tir/src/: detect_pub.rs  fake_img_pub.rs  img_publisher.rs  lib.rs
