[package]
name = "yolo_tir"
version = "0.0.1"
authors =["Paolo Dimasi <paolo.dimasi@outlook.com>"]
edition = "2021"


# LIBRARY
[lib]
# name of the library should be the same of the module
name = "box_info"
path = "src/lib.rs"

# EXECUTABLE CONFIGUTATION
[[bin]]
name = "image_publisher"
path = "src/img_publisher.rs"

# LIBRARY REFERENCE
[dependencies]
# ROS
rclrs = "*"
rosidl_runtime_rs = "*"
std_msgs = "*"
vision_msgs = "*"
sensor_msgs = "*"

# OTHER
# change the path according to your   src
onnxruntime-sys= { version = "0.0.14", path = "/home/user/onnxruntime-rs/onnxruntime-sys" }
onnxruntime = { version = "0.0.14", path = "/home/user/onnxruntime-rs/onnxruntime" }
#handle idiomatic error
anyhow = {version = "1", features = ["backtrace"]}
ndarray = "0.15"
ndarray-stats = "*"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.24"
show-image = { version = "0.13", features = [ "image", "raqote" ] }
ureq = "2.1"
tracing = "0.1"
